# src/routes/index.js
@@ -11,6 +11,7 @@ import { dashboardRoutes } from "./dashboard.routes.js";
 import { emailCampaignRoutes } from "./email-campaign.routes.js";
 import { launchRoutes } from "./launch.routes.js";
 import { profileRoutes } from "./profile.routes.js";
+import { publicationRoutes } from "./publication.routes.js";
 import { reelRoutes } from "./reel.routes.js";
 import { roleRoutes } from "./role.routes.js";
 import { storySequenceRoutes } from "./story-sequence.routes.js";
@@ -23,7 +24,7 @@ apiRoutes.get("/", (_request, response) => {
   response.status(200).json({
     service: "flow-jl-api",
     version: "v1",
-    modules: ["assets", "audits", "auth", "carousels", "content-approvals", "content-ideas", "copywritings", "dashboards", "emails", "launches", "profiles", "reels", "roles", "stories", "users", "youtube-contents", "swagger"]
+    modules: ["assets", "audits", "auth", "carousels", "content-approvals", "content-ideas", "copywritings", "dashboards", "emails", "launches", "profiles", "publications", "reels", "roles", "stories", "users", "youtube-contents", "swagger"]
   });
 });
 
@@ -38,6 +39,7 @@ apiRoutes.use("/dashboards", dashboardRoutes);
 apiRoutes.use("/emails", emailCampaignRoutes);
 apiRoutes.use("/launches", launchRoutes);
 apiRoutes.use("/profiles", profileRoutes);
+apiRoutes.use("/publications", publicationRoutes);
 apiRoutes.use("/reels", reelRoutes);
 apiRoutes.use("/roles", roleRoutes);
 apiRoutes.use("/stories", storySequenceRoutes);
